# code-adaptive-prob-ode-solvers

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
experiments/1_van_der_pol/: plot.py  vdp.py  vdp_baseline_solution.npy  vdp_grid_adaptive.npy  vdp_grid_fixed_inaccurate.npy  vdp_plot.py  vdp_runtime_adaptive.npy  vdp_runtime_fixed_accurate.npy  vdp_runtime_fixed_inaccurate.npy
experiments/2_workprec_simple/: data_results.npy  plot_simple.py  run_simple.py
experiments/3_workprec_harder/: data_results.npy  data_ts.npy  plot_harder.py  run_harder.py
experiments/4_brusselator/: data_checkpoint.npy  data_textbook.npy  plot.py  run.py
experiments/5_vs_interpolation/: data_results.npy  data_solution.npy  display_frame.py  measure.py
experiments/6_blackjax_ode_parameter/: visual.py
experiments/6_learn_ode/: learn.py
experiments/7_learn_ode_dynamics/: learn.py
experiments/7_node/: data_losses.npy_rng_1_std_0.1.npy  data_losses.npy_rng_2_std_0.1.npy  data_losses.npy_rng_3_std_0.1.npy  data_losses.npy_rng_4_std_0.1.npy  data_losses.npy_rng_5_std_0.1.npy  data_losses_rng_1_std_0.0001.npy  data_losses_rng_1_std_0.1.npy  data_losses_rng_2_std_0.1.npy  data_losses_rng_3_std_0.1.npy  data_losses_rng_4_std_0.1.npy  data_losses_rng_5_std_0.1.npy  data_plots.npy_rng_1_std_0.1.npy  data_plots.npy_rng_2_std_0.1.npy  data_plots.npy_rng_3_std_0.1.npy  data_plots.npy_rng_4_std_0.1.npy  data_plots.npy_rng_5_std_0.1.npy  data_plots_rng_1_std_0.1.npy  data_plots_rng_2_std_0.1.npy  data_plots_rng_3_std_0.1.npy  (+4 more)
tests/: test_ivpsolvers.py  test_solve_and_save_at.py
(+38 files in other folders)
