[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "odecheckpts"
version = "0.0.1"
dependencies = [
    # Ensure that JAX is installed.
    "probdiffeq",   # our code
    "diffeqzoo",    # ODE examples
    "pytest_cases", # testing
    "pre-commit",   # some basic CI
    "matplotlib",   # plot
    "tqdm",         # progressbar
    "diffrax",      # competition
    "tueplots",     # plotting utilities
]
